--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "title": "Grayscale",
-    "name": "startbootstrap-grayscale",
-    "version": "6.0.3",
+    "title": "James Poirier Wedding Website",
+    "name": "jpoirier-wedding",
+    "version": "1.0.0",
     "scripts": {
         "build": "npm run clean && npm run build:pug && npm run build:scss && npm run build:scripts && npm run build:assets",
         "build:assets": "node scripts/build-assets.js",
@@ -12,7 +12,7 @@
         "start": "npm run build && node scripts/start.js",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
-    "description": "A grayscale one page HTML theme for Bootstrap.",
+    "description": "The wedding website for James and Jessica Poirier.",
     "keywords": [
         "css",
         "sass",
@@ -21,19 +21,14 @@
         "theme",
         "template"
     ],
-    "homepage": "https://startbootstrap.com/theme/grayscale",
+    "homepage": "jessplusjames.com",
     "bugs": {
-        "url": "https://github.com/StartBootstrap/startbootstrap-grayscale/issues",
-        "email": "feedback@startbootstrap.com"
+        "url": "https://github.com/jpoirier1/jpoirier1.github.io/issues",
+        "email": "jpoirierfun@gmail.com"
     },
-    "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (https://davidmiller.io/)"
-    ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/StartBootstrap/startbootstrap-grayscale.git"
+        "url": "https://github.com/jpoirier1/jpoirier1.github.io/"
     },
     "dependencies": {
         "bootstrap": "4.5.3"
@@ -45,8 +40,6 @@
         "concurrently": "5.3.0",
         "postcss": "8.1.4",
         "prettier": "2.1.2",
-        "pug": "3.0.0",
-        "sass": "1.28.0",
         "shelljs": "0.8.4",
         "upath": "2.0.0"
     }
